# dang

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DOUG.md  README.md  TODO.md  api.dash  complete.md  current-task.md  dagger.json  dagger.toml  dang-imports.md  either.md  eval_test.dash  git.dash  go.mod  go.sum  go.work  go.work.sum  handoff.md  simple_test.dash  test_assertions.dash  test_chaining.dash  test_chaining2.dash  test_comprehensive_equality.dash  test_debug.dash  test_default.dash  test_detailed_assertions.dash  test_equality.dash  test_equality_complex.dash  test_equality_passing.dash  test_inference.dash  test_json.dash  test_json_module.dash  test_json_simple.dash  test_minimal.dash  test_new_features.dash  test_passing_assertions.dash  test_required.dash
.claude/: settings.json
.container-use/: AGENT.md  environment.json
.dagger/: bind.bd  bind.sp  dash.dash  main.dang  (+1 more)
treesitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  generate.go  go.mod  go.sum  grammar.js  node-types.json  package.json  pyproject.toml  setup.py  tree-sitter.json
treesitter/bindings/c/: tree-sitter-bind.pc.in  tree-sitter-dash.pc.in
treesitter/bindings/c/tree_sitter/: tree-sitter-bind.h  tree-sitter-dash.h
treesitter/bindings/go/: binding.go  binding_test.go
treesitter/bindings/node/: binding.cc  index.js
treesitter/bindings/python/tests/: test_binding.py
treesitter/bindings/python/tree_sitter_bind/: __init__.py  binding.c
treesitter/bindings/python/tree_sitter_dash/: __init__.py  binding.c
treesitter/bindings/rust/: README.md  lib.rs
treesitter/bindings/swift/: bind.h
treesitter/bindings/swift/TreeSitterDashTests/: TreeSitterDashTests.swift
treesitter/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm
treesitter/src/: grammar.json  node-types.json  parser.c  scanner.c
treesitter/test/corpus/: apko.txt  build.txt  comments.txt  conditionals.txt  control_flow.txt  directives.txt  doc_strings.txt  from_yaml.txt  function_literals.txt  logical_ops.txt  maps.txt  non_null_assert.txt  reopen.txt  rescue.txt  scalar_decls.txt  scalars.txt  selections.txt  unary_minus.txt
(+1549 files in other folders)
